# remi

./: Cargo.toml  README.md  SKILL.md  dist-workspace.toml
.github/workflows/: release.yml
src/: config.rs  git.rs  hook.rs  journal.rs  llm.rs  main.rs  paths.rs  pending.rs  recap.rs  scan.rs
