[package]
name = "remi"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/ogxd/remi"
homepage = "https://github.com/ogxd/remi"
description = "Your personal commit journal"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
