[package]
name = "remi"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/ogxd/remi"
homepage = "https://github.com/ogxd/remi"
description = "Your personal commit journal"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
genai = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
simplelog = "0.12"
walkdir = "2"
indicatif = "0.17"
futures = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
