[package]
name = "remi"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ogxd/remi"
homepage = "https://github.com/ogxd/remi"
description = "Your personal commit journal"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
indicatif = "0.17"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
